--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ tempfile = "3.1.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 schannel = "0.1.17"
+hex = "0.4"
 
 [target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "ios")))'.dependencies]
 log = "0.4.5"
